--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   </section>
 
   <section class="content">
-    <h2>Biloudia Clerger</h2>
+    <h2>Biloudia CLERGER</h2>
     <p>Développeuse web passionnée de Jérémie. J'aime créer des interfaces web accessibles, programmer des systèmes éducatifs et électroniques, et contribuer à des projets à impact social.</p>
     <p>Je maîtrise HTML, CSS, JS, Django, et j’aime mélanger design et technologie pour des résultats élégants et utiles.</p>
     <div class="cta">
@@ -229,7 +229,7 @@
 
   <section class="content">
     <h2>ClergerTech</h2>
-    <p>Fondée par <strong>Biloudia Clerger</strong>, ClergerTech est une micro-entreprise numérique dédiée à la création de solutions web simples, esthétiques et accessibles.</p>
+    <p>Fondée par <strong>Biloudia CLERGER</strong>, ClergerTech est une micro-entreprise numérique dédiée à la création de solutions web simples, esthétiques et accessibles.</p>
     <p>Nous développons des sites vitrines, des applications web, des outils éducatifs, des flyers personnalisés et des dispositifs électroniques programmés avec Arduino pour les jeunes et les entrepreneurs.</p>
     <p>Notre mission est de rendre la technologie compréhensible, utile et valorisante pour chaque utilisateur, peu importe son niveau. Avec passion et précision, nous bâtissons le web de demain.</p>
   </section>
